--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,8 +2,16 @@
 <html>
 	<head>
 		<title>Portfolio Website</title>
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
 		<h1>Welcome to my portfolio website</h1>
+		<p>This is a paragraph under the first heading 1.</p>
+
+		<h1>This is another heading 1</h1>
+		<p>This is a paragraph under the second heading 1.</p>
+
+		
+		<script src="js/controller.js"></script>
 	</body>
 </html>
